// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A snapshot of a populated cell 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    accessibilityRole="button"
    accessible={true}
    collapsable={false}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#fefefe",
        "borderColor": "#ddd",
        "borderRadius": 7.5394000000000005,
        "borderWidth": 1.1,
        "elevation": 0,
        "height": 31.9374,
        "justifyContent": "center",
        "width": 31.9374,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#ddd",
          "fontSize": 12.199000000000002,
        }
      }
    >
      2
    </Text>
  </View>
</View>
`;

exports[`A snapshot of an active cell 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    accessibilityRole="button"
    accessible={true}
    collapsable={false}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#323031",
        "borderColor": "#323031",
        "borderRadius": 7.5394000000000005,
        "borderWidth": 1.1,
        "elevation": 1.7798000000000003,
        "height": 31.9374,
        "justifyContent": "center",
        "width": 31.9374,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#fefefe",
          "fontSize": 12.199000000000002,
        }
      }
    >
      2
    </Text>
  </View>
</View>
`;

exports[`A snapshot of an empty cell 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    accessible={false}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#fefefe",
        "borderColor": "#ddd",
        "borderRadius": 7.5394000000000005,
        "borderWidth": 0,
        "elevation": 0,
        "height": 31.9374,
        "justifyContent": "center",
        "width": 31.9374,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#fefefe",
          "borderColor": "#ddd",
          "borderRadius": 7.5394000000000005,
          "borderWidth": 0,
          "elevation": 0,
          "height": 31.9374,
          "justifyContent": "center",
          "width": 31.9374,
        }
      }
    />
  </View>
</View>
`;
